# hydrus-scripts

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  HISTORY.md  LICENSE  Makefile  README.md  config.example.yaml  hydrus_scripts.py  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
tests/: test_hydrus_scripts.py  test_main.py
