[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hydrus_scripts"
version = "0.1.0"
description = "personal hydrus scripts"
authors = ["Rachmadani Haryono <foreturiga@gmail.com>"]
license = "MIT license"
homepage = "https://github.com/rachmadaniharyono/hydrus_scripts"
readme = "README.md"
classifiers = ["Development Status :: 2 - Pre-Alpha", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Natural Language :: English", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.6", "Programming Language :: Python :: 3.7", "Programming Language :: Python :: 3.8"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
PyYAML = "^6.0"
hydrus-api = "^2.14.3"
tqdm = "^4.62.3"
more-itertools = "^8.10.0"

[tool.poetry.dev-dependencies]
