[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hydrus_scripts"
version = "0.1.0"
description = "personal hydrus scripts"
authors = ["Rachmadani Haryono <foreturiga@gmail.com>"]
license = "MIT license"
homepage = "https://github.com/rachmadaniharyono/hydrus_scripts"
readme = "README.md"
classifiers = ["Development Status :: 2 - Pre-Alpha", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Natural Language :: English", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.6", "Programming Language :: Python :: 3.7", "Programming Language :: Python :: 3.8"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
PyYAML = "^6.0"
hydrus-api = "^2.14.3"
tqdm = "^4.62.3"
more-itertools = "^8.10.0"
requests-html = "^0.10.0"
BASC-py4chan = "^0.6.5"
Pillow = "^8.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
better-exceptions = "^0.3.3"
pdbpp = "^0.10.3"
pre-commit = "^2.15.0"
pytest-golden = "^0.2.1"
pytest-isort = "^2.0.0"
pytest-monkeytype = "^1.1.0"
pytest-vcr = "^1.0.2"

[tool.poetry.scripts]
hydrus_scripts = 'hydrus_scripts:main'

[tool.pytest.ini_options]
addopts = "--doctest-modules -x --failed-first --monkeytype-output=./monkeytype.sqlite3"
enable_assertion_pass_hook = true
